--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
     <!-- nav-bar -->
     <ul class="nav nav-pills ms-3 sticky-top">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#" style="color: black;">Admin</a>
+          <a class="nav-link" aria-current="page" href="./html/admin.html" style="color: black;">Admin</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="./html/products.html" role="button" aria-expanded="false" style="color: black;">Products</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Mini Handbags</a></li>
-            <li><a class="dropdown-item" href="#">Designer Handbags</a></li>
-            <li><a class="dropdown-item" href="#">3 & 4 piece Handbags</a></li>
-            <li><a class="dropdown-item" href="#">Backpacks</a></li>
-            <li><a class="dropdown-item" href="#">Laptop Bags</a></li>
-            <li><a class="dropdown-item" href="#">Lagguage Bags</a></li>
-
+            <li><a class="dropdown-item" href="./html/products.html#mini">Mini Handbags</a></li>
+            <li><a class="dropdown-item" href="./html/products.html#Designer">Designer Handbags</a></li>
+            <li><a class="dropdown-item" href="./html/products.html#backpacks">Backpacks</a></li>
           </ul>
         </li>
         <li class="nav-item">
