--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" style="color: black;">Checkout</a>
+          <a class="nav-link" href="./html/checkout.html" style="color: black;">Checkout</a>
         </li>
         <li class="lg">
             <img src="./images/logo3-removebg-preview.png" alt="" srcset="">
