--- a/html/admin.html
+++ b/html/admin.html
@@ -42,19 +42,19 @@
             >
           </li>
           <li>
-            <a class="dropdown-item" href="./products.html#Designer"
+            <a class="dropdown-item" href="./products.html#designer"
               >Designer Handbags</a
             >
           </li>
           <li>
-            <a class="dropdown-item" href="./products.html#backpacks"
+            <a class="dropdown-item" href="./products.html#packs"
               >Backpacks</a
             >
           </li>
         </ul>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" style="color: black">Checkout</a>
+        <a class="nav-link" href="./checkout.html" style="color: black">Checkout</a>
       </li>
       <li class="lg">
         <img src="../images/logo3-removebg-preview.png" alt="" srcset="" />
@@ -70,29 +70,70 @@
         <h5>Item's list</h5>
       </div>
       <div class="add">
-        <button class="sort-item" id="sort"  onclick="sortItem()">Sort Iterms</button>
-        <button class="add-item" id="add" data-target="#modal_1" data-bs-toggle="modal" onclick="addItem()">Add Item</button>
+        <button class="sort-item" id="sort" onclick="sortItem()">
+          Sort Iterms
+        </button>
+        <button
+          class="add-item"
+          id="add"
+          data-bs-target="#addProd"
+          data-bs-toggle="modal"
+        >
+          Add Item
+        </button>
       </div>
     </div>
-    
-            <!-- modal -->
-    <div class="modal" tabindex="-1" id="modal_1">
-      <div class="modal-dialog">
-        <div class="modal-content">
+
+    <!-- modal -->
+    <div class="modal modal" tabindex="-1" id="addProd" style="width: 18rem; transform: translateX(150%);" >
+      <div class="modal-dialog" >
+        <div class="modal-content" style="  background-color: #c77948;">
           <div class="modal-header">
-            <h5 class="modal-title">Modal title</h5>
+            <h5 class="modal-title">Add an Item</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <p>Modal body text goes here.</p>
+            <form action="" class="form">
+              <label for="">item no.</label>
+              <input type="number" class="input" id="no." placeholder="no.">
+              <label for="">Product Name</label>
+              <input type="text" class="input" id="name" placeholder="name" />
+              <label for="">Product ID</label>
+              <input type="number" class="input" id="id" placeholder="id" />
+              <label for="">Product Colour</label>
+              <input type="text" class="input" id="color" placeholder="color" />
+              <label for="">Product Price</label>
+              <input type="number" class="input" id="price" placeholder="price" />
+            </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn" data-bs-reset="modal" style="  background-color: wheat; font-size: 18px;">Reset</button>
+            <button type="button" id="addn" class="btn" style="  background-color: wheat; font-size: 18px;">Add Item</button>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- <div class="my_modal">
+      <div class="my_modal_content">
+        <h4>Add an Item</h4>
+        <form action="" class="form">
+          <label for="">Product Name</label>
+          <input type="text" class="input" id="name" placeholder="name" />
+          <label for="">Product ID</label>
+          <input type="text" class="input" id="id" placeholder="id" />
+          <label for="">Product Colour</label>
+          <input type="text" class="input" id="color" placeholder="color" />
+          <label for="">Product Price</label>
+          <input type="text" class="input" id="price" placeholder="price" />
+          <div class="buttns">
+            <button id="addn" onclick="">ADD</button>
+            <button id="reset">Reset</button>
+            <button class="close">close</button>
+          </div>
+        </form>
+      </div>
+    </div> -->
 
     <!-- <label for=""></label> -->
     <table class="table">
@@ -111,6 +152,16 @@
         <t></t>
       </tbody>
     </table>
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="footer">
+        <div class="name">SEABA'S BAGS</div>
+        <div class="copy-right">
+          &copy; Seaba's Bags 2022 all copies reserved
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
