--- a/html/admin.html
+++ b/html/admin.html
@@ -69,8 +69,8 @@
       <div class="items">
         <h5>Item's list</h5>
       </div>
-      <div class="add">
-        <button class="sort-item" id="sort" onclick="sortItem()">
+      <div class="sort_items">
+        <button class="sort-item" id="sort" >
           Sort Iterms
         </button>
         <button
@@ -114,27 +114,6 @@
       </div>
     </div>
 
-    <!-- <div class="my_modal">
-      <div class="my_modal_content">
-        <h4>Add an Item</h4>
-        <form action="" class="form">
-          <label for="">Product Name</label>
-          <input type="text" class="input" id="name" placeholder="name" />
-          <label for="">Product ID</label>
-          <input type="text" class="input" id="id" placeholder="id" />
-          <label for="">Product Colour</label>
-          <input type="text" class="input" id="color" placeholder="color" />
-          <label for="">Product Price</label>
-          <input type="text" class="input" id="price" placeholder="price" />
-          <div class="buttns">
-            <button id="addn" onclick="">ADD</button>
-            <button id="reset">Reset</button>
-            <button class="close">close</button>
-          </div>
-        </form>
-      </div>
-    </div> -->
-
     <!-- <label for=""></label> -->
     <table class="table">
       <thead>
@@ -148,8 +127,8 @@
           <th id="delete">Delete</th>
         </tr>
       </thead>
-      <tbody>
-        <t></t>
+      <tbody id="proSorting">
+      
       </tbody>
     </table>
 
