--- a/html/checkout.html
+++ b/html/checkout.html
@@ -22,14 +22,14 @@
     <div class="cart"><h2>SHOPPING CART</h2></div>
 
     <!-- THE TABLE -->
-    <table>
+    <table class="tab">
       <th>ITEMS</th>
       <th>QUANTITY</th>
       <th>PRICE</th>
       <th>TOTAL</th>
 
-      <tr>
-        <td id="tab"></td>
+      <tr >
+        <td ></td>
       </tr>
     </table>
 
@@ -61,6 +61,7 @@
       </div>
     </footer>
 
+    <script src="../scripts/products.js"></script>
     <script src="../scripts/checkout.js"></script>
   </body>
 </html>
