--- a/html/products.html
+++ b/html/products.html
@@ -63,7 +63,7 @@
         >
       </li>
       <li class="lg">
-        <img src="../images/logo3-removebg-preview.png" alt="" srcset="" />
+        <img src="https://i.postimg.cc/8CPcYWPX/logo3-removebg-preview.png" alt="" srcset="" />
       </li>
     </ul>
 
@@ -73,7 +73,9 @@
         <div class="row">
           <h2 class="min" id="min">Mini Handbags</h2>
         </div>
-        <div class="row item"></div>
+        <div class="row item">
+          
+        </div>
       </div>
     </section>
 
@@ -114,6 +116,7 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script src="../scripts/checkout.js"></script>
     <script src="../scripts/products.js"></script>
   </body>
 </html>
