--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           <a class="nav-link" href="./html/checkout.html" style="color: black;">Checkout</a>
         </li>
         <li class="lg">
-            <img src="./images/logo3-removebg-preview.png" alt="" srcset="">
+            <img src="https://i.postimg.cc/8CPcYWPX/logo3-removebg-preview.png" alt="" srcset="">
         </li>
       </ul>
     <div class="logo">
-        <img src="./images/logo3-removebg-preview.png" alt="" srcset="">
+        <img src="https://i.postimg.cc/8CPcYWPX/logo3-removebg-preview.png" alt="" srcset="">
     </div>
 
     <!-- landing -->
