--- a/html/admin.html
+++ b/html/admin.html
@@ -14,57 +14,50 @@
     <link rel="stylesheet" href="../styles/admin.css" />
   </head>
   <body>
+    
     <!-- nav-bar -->
-    <ul class="nav nav-pills ms-3 sticky-top">
-      <li class="nav-item">
-        <a
-          class="nav-link"
-          aria-current="page"
-          href="../index.html"
-          style="color: black"
-          >Home</a
-        >
-      </li>
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          data-bs-toggle="dropdown"
-          href="./html/products.html"
-          role="button"
-          aria-expanded="false"
-          style="color: black"
-          >Products</a
-        >
-        <ul class="dropdown-menu">
-          <li>
-            <a class="dropdown-item" href="./products.html#mini"
-              >Mini Handbags</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./products.html#designer"
-              >Designer Handbags</a
-            >
-          </li>
-          <li>
-            <a class="dropdown-item" href="./products.html#packs"
-              >Backpacks</a
-            >
-          </li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./checkout.html" style="color: black">Checkout</a>
-      </li>
-      <li class="lg">
-        <img src="https://i.postimg.cc/8CPcYWPX/logo3-removebg-preview.png" alt="" srcset="" />
-      </li>
-    </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand lg" href="#"> <img src="https://i.postimg.cc/8CPcYWPX/logo3-removebg-preview.png" alt="" srcset="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./html/admin.html">ADMIN</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                PRODUCTS
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="./html/products.html#mini">Action</a></li>
+                <li><a class="dropdown-item" href="./html/products.html#Designer">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="./html/products.html#backpacks">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href=" ./html/checkout.html ">CHECKOUT</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
 
     <!-- top -->
     <div class="min">
       <div class="title">
-        <h3>Bag <span>your</span> Bags</h3>
+<h2>PRODUCTS AVAILABLE :</h2>
       </div>
       <div class="items">
         <h5>Item's list</h5>
