--- a/index.html
+++ b/index.html
@@ -11,38 +11,62 @@
 <body>
 
     <!-- nav-bar -->
-    <ul class="nav nav-pills ms-3 sticky-top">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="./html/admin.html" style="color: black;">Admin</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="./html/products.html" role="button" aria-expanded="false" style="color: black;">Products</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="./html/products.html#mini">Mini Handbags</a></li>
-            <li><a class="dropdown-item" href="./html/products.html#Designer">Designer Handbags</a></li>
-            <li><a class="dropdown-item" href="./html/products.html#backpacks">Backpacks</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./html/checkout.html" style="color: black;">Checkout</a>
-        </li>
-        <li class="lg">
-            <img src="https://i.postimg.cc/8CPcYWPX/logo3-removebg-preview.png" alt="" srcset="">
-        </li>
-      </ul>
-    <div class="logo">
+  
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand lg" href="#"> <img src="https://i.postimg.cc/8CPcYWPX/logo3-removebg-preview.png" alt="" srcset="">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./html/admin.html">ADMIN</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  PRODUCTS
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="./html/products.html#mini">Action</a></li>
+                  <li><a class="dropdown-item" href="./html/products.html#Designer">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="./html/products.html#backpacks">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href=" ./html/checkout.html ">CHECKOUT</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
+
+
+
+
+    <!-- <div class="logo">
         <img src="https://i.postimg.cc/8CPcYWPX/logo3-removebg-preview.png" alt="" srcset="">
-    </div>
+    </div> -->
 
     <!-- landing -->
-    <div class="cont">
+    <!-- <div class="cont">
         <div class="dis">
             <img src="./images/decoration/deco1-removebg-preview.png" alt="" srcset="">
         </div>
         <div class="play">
             <img src="./images/decoration/2-removebg-preview.png" alt="" srcset="">
         </div>
-    </div>
+    </div> -->
 
     <div class="welcome">
         <h2>Welcome</h2>
@@ -50,7 +74,7 @@
         <h2> Seaba's Bags</h2>
     </div>
 
-    <div class="more">
+    <!-- <div class="more">
         <div class="disp">
             <img src="./images/decoration/deco3-removebg-preview.png" alt="" srcset="">
         </div>
@@ -60,7 +84,7 @@
         <div class="splay">
             <img src="./images/decoration/deco4-removebg-preview.png" alt="" srcset="">
         </div>
-    </div>
+    </div> -->
    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
