--- a/html/admin.html
+++ b/html/admin.html
@@ -57,15 +57,15 @@
     <!-- top -->
     <div class="min">
       <div class="title">
-<h2>PRODUCTS AVAILABLE :</h2>
+<h2>Admin: <span>Stock</span> </h2>
       </div>
-      <div class="items">
+      <!-- <div class="items">
         <h5>Item's list</h5>
-      </div>
-      <div class="filter-item" >
-        <button id="filter">FILTER</button>
-      </div>
+      </div> -->
+      <!-- <div class="filter-item" >
+      </div> -->
       <div class="sort_items">
+        <button id="filter">FILTER</button>
         <button class="sort-item" id="sort" >
           SORT
         </button>
@@ -138,11 +138,11 @@
     <table class="table">
       <thead>
         <tr>
+          <th id="id">ID</th>
           <th id="name">Product name</th>
-          <th id="id">Product id</th>
-          <th id="price">Product Price</th>
-          <th id="colour">Product Colour</th>
+          <th id="colour">Colour</th>
           <th id="category">Category</th>
+          <th id="price">Price</th>
           <th id="edt">Edit</th>
           <th id="delete">Delete</th>
         </tr>
