--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- nav-bar -->
   
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand lg" href="#"> <img src="https://i.postimg.cc/8CPcYWPX/logo3-removebg-preview.png" alt="" srcset="">
           </a>
@@ -48,15 +48,15 @@
             </form>
           </div>
         </div>
-      </nav>
+      </nav> -->
 
 
 
 
 
-    <!-- <div class="logo">
+    <div class="logo">
         <img src="https://i.postimg.cc/8CPcYWPX/logo3-removebg-preview.png" alt="" srcset="">
-    </div> -->
+    </div>
 
     <!-- landing -->
     <!-- <div class="cont">
@@ -69,9 +69,15 @@
     </div> -->
 
     <div class="welcome">
-        <h2>Welcome</h2>
-        <h3>to</h3>
-        <h2> Seaba's Bags</h2>
+        <!-- <h2>Welcome to </h2>
+        <h3>to</h3> -->
+        <div class="txt"><h2> Seaba's Bags Boutique</h2></div>
+        <div class="line"></div>
+        <button class="shop"><a href="./html/products.html"> Shop Now</a></button>
+    </div>
+
+    <div class="admin">
+      <button class="ad"> <a href="./html/admin.html">Admin</a> </button>
     </div>
 
     <!-- <div class="more">
